--- a/My-HTML-CSS/index.html
+++ b/My-HTML-CSS/index.html
@@ -9,6 +9,21 @@
   <body>
     <div class="grid-layout-a">
         <div class="gid-item-a">01</div>
+        <div class="gid-item-a">02</div>
+        <div class="gid-item-a">03</div>
+        <div class="gid-item-a">04</div>
+        <div class="gid-item-a">05</div>
+        <div class="gid-item-a">06</div>
+        <div class="gid-item-a">07</div>
+        <div class="gid-item-a">08</div>
+        <div class="gid-item-a">09</div>
+        <div class="gid-item-a">10</div>
+        <div class="gid-item-a">11</div>
+        <div class="gid-item-a">12</div>
+        <div class="gid-item-a">13</div>
+        <div class="gid-item-a">14</div>
+        <div class="gid-item-a">15</div>
+        <div class="gid-item-a">16</div>
     </div>
   </body>
 </html>
