grid-layout-bクラスとgrid-item-bクラスを作成しました

--- a/My-HTML-CSS/index.html
+++ b/My-HTML-CSS/index.html
@@ -25,5 +25,9 @@
         <div class="gid-item-a">15</div>
         <div class="gid-item-a">16</div>
     </div>
+    
+    <div class="grid-layout-b">
+        <div class="grid-item-b">01</div>
+    </div>
   </body>
 </html>
