grid-item-bを増やしました

--- a/My-HTML-CSS/index.html
+++ b/My-HTML-CSS/index.html
@@ -28,6 +28,9 @@
     <br />
     <div class="grid-layout-b">
       <div class="grid-item-b">01</div>
+      <div class="grid-item-b">02</div>
+      <div class="grid-item-b">03</div>
+      <div class="grid-item-b">04</div>
     </div>
   </body>
 </html>
