grid-layout-cクラスとgrid-item-cクラスを作成しました

--- a/My-HTML-CSS/index.html
+++ b/My-HTML-CSS/index.html
@@ -34,5 +34,10 @@
       <div class="grid-item-b">03</div>
       <div class="grid-item-b">04</div>
     </div>
+    <br />
+    <h1>c.</h1>
+    <div class="grid-layout-c">
+      <div class="grid-item-c">01</div>
+    </div>
   </body>
 </html>
