grid-item-cを増やしました

--- a/My-HTML-CSS/index.html
+++ b/My-HTML-CSS/index.html
@@ -38,6 +38,11 @@
     <h1>c.</h1>
     <div class="grid-layout-c">
       <div class="grid-item-c">01</div>
+      <div class="grid-item-c">02</div>
+      <div class="grid-item-c">03</div>
+      <div class="grid-item-c">04</div>
+      <div class="grid-item-c">05</div>
+      <div class="grid-item-c">06</div>
     </div>
   </body>
 </html>
