gid-item-aとなっていたタイポを修正しました

--- a/My-HTML-CSS/index.html
+++ b/My-HTML-CSS/index.html
@@ -9,22 +9,22 @@
   <body>
     <h1>a.</h1>
     <div class="grid-layout-a">
-      <div class="gid-item-a">01</div>
-      <div class="gid-item-a">02</div>
-      <div class="gid-item-a">03</div>
-      <div class="gid-item-a">04</div>
-      <div class="gid-item-a">05</div>
-      <div class="gid-item-a">06</div>
-      <div class="gid-item-a">07</div>
-      <div class="gid-item-a">08</div>
-      <div class="gid-item-a">09</div>
-      <div class="gid-item-a">10</div>
-      <div class="gid-item-a">11</div>
-      <div class="gid-item-a">12</div>
-      <div class="gid-item-a">13</div>
-      <div class="gid-item-a">14</div>
-      <div class="gid-item-a">15</div>
-      <div class="gid-item-a">16</div>
+      <div class="grid-item-a">01</div>
+      <div class="grid-item-a">02</div>
+      <div class="grid-item-a">03</div>
+      <div class="grid-item-a">04</div>
+      <div class="grid-item-a">05</div>
+      <div class="grid-item-a">06</div>
+      <div class="grid-item-a">07</div>
+      <div class="grid-item-a">08</div>
+      <div class="grid-item-a">09</div>
+      <div class="grid-item-a">10</div>
+      <div class="grid-item-a">11</div>
+      <div class="grid-item-a">12</div>
+      <div class="grid-item-a">13</div>
+      <div class="grid-item-a">14</div>
+      <div class="grid-item-a">15</div>
+      <div class="grid-item-a">16</div>
     </div>
     <br />
     <h1>b.</h1>
