--- a/My-HTML-CSS/index.html
+++ b/My-HTML-CSS/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>a.</h1>
-    <div class="grid-layout-a">
+    <div class="grid-layout">
       <div class="grid-item-a">01</div>
       <div class="grid-item-a">02</div>
       <div class="grid-item-a">03</div>
@@ -28,7 +28,7 @@
     </div>
     <br />
     <h1>b.</h1>
-    <div class="grid-layout-b">
+    <div class="grid-layout">
       <div class="grid-item-b">01</div>
       <div class="grid-item-b">02</div>
       <div class="grid-item-b">03</div>
@@ -36,7 +36,7 @@
     </div>
     <br />
     <h1>c.</h1>
-    <div class="grid-layout-c">
+    <div class="grid-layout">
       <div class="grid-item-c">01</div>
       <div class="grid-item-c">02</div>
       <div class="grid-item-c">03</div>
