--- a/My-HTML-CSS/index.html
+++ b/My-HTML-CSS/index.html
@@ -7,42 +7,44 @@
     <title>My GridLayout</title>
   </head>
   <body>
-    <h1>a.</h1>
-    <div class="grid-layout">
-      <div class="grid-item-a">01</div>
-      <div class="grid-item-a">02</div>
-      <div class="grid-item-a">03</div>
-      <div class="grid-item-a">04</div>
-      <div class="grid-item-a">05</div>
-      <div class="grid-item-a">06</div>
-      <div class="grid-item-a">07</div>
-      <div class="grid-item-a">08</div>
-      <div class="grid-item-a">09</div>
-      <div class="grid-item-a">10</div>
-      <div class="grid-item-a">11</div>
-      <div class="grid-item-a">12</div>
-      <div class="grid-item-a">13</div>
-      <div class="grid-item-a">14</div>
-      <div class="grid-item-a">15</div>
-      <div class="grid-item-a">16</div>
-    </div>
-    <br />
-    <h1>b.</h1>
-    <div class="grid-layout">
-      <div class="grid-item-b">01</div>
-      <div class="grid-item-b">02</div>
-      <div class="grid-item-b">03</div>
-      <div class="grid-item-b">04</div>
-    </div>
-    <br />
-    <h1>c.</h1>
-    <div class="grid-layout">
-      <div class="grid-item-c">01</div>
-      <div class="grid-item-c">02</div>
-      <div class="grid-item-c">03</div>
-      <div class="grid-item-c">04</div>
-      <div class="grid-item-c">05</div>
-      <div class="grid-item-c">06</div>
+    <div class="grid-container">
+      <h1>a.</h1>
+      <div class="grid-layout">
+        <div class="grid-item-a">01</div>
+        <div class="grid-item-a">02</div>
+        <div class="grid-item-a">03</div>
+        <div class="grid-item-a">04</div>
+        <div class="grid-item-a">05</div>
+        <div class="grid-item-a">06</div>
+        <div class="grid-item-a">07</div>
+        <div class="grid-item-a">08</div>
+        <div class="grid-item-a">09</div>
+        <div class="grid-item-a">10</div>
+        <div class="grid-item-a">11</div>
+        <div class="grid-item-a">12</div>
+        <div class="grid-item-a">13</div>
+        <div class="grid-item-a">14</div>
+        <div class="grid-item-a">15</div>
+        <div class="grid-item-a">16</div>
+      </div>
+      <br />
+      <h1>b.</h1>
+      <div class="grid-layout">
+        <div class="grid-item-b">01</div>
+        <div class="grid-item-b">02</div>
+        <div class="grid-item-b">03</div>
+        <div class="grid-item-b">04</div>
+      </div>
+      <br />
+      <h1>c.</h1>
+      <div class="grid-layout">
+        <div class="grid-item-c">01</div>
+        <div class="grid-item-c">02</div>
+        <div class="grid-item-c">03</div>
+        <div class="grid-item-c">04</div>
+        <div class="grid-item-c">05</div>
+        <div class="grid-item-c">06</div>
+      </div>
     </div>
   </body>
 </html>
