grid-layoutというクラス名をgrid-contentに変更しました

--- a/My-HTML-CSS/index.html
+++ b/My-HTML-CSS/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="grid-container">
       <h1>a.</h1>
-      <div class="grid-layout">
+      <div class="grid-content">
         <div class="grid-item-a">01</div>
         <div class="grid-item-a">02</div>
         <div class="grid-item-a">03</div>
@@ -29,7 +29,7 @@
       </div>
       <br />
       <h1>b.</h1>
-      <div class="grid-layout">
+      <div class="grid-content">
         <div class="grid-item-b">01</div>
         <div class="grid-item-b">02</div>
         <div class="grid-item-b">03</div>
@@ -37,7 +37,7 @@
       </div>
       <br />
       <h1>c.</h1>
-      <div class="grid-layout">
+      <div class="grid-content">
         <div class="grid-item-c">01</div>
         <div class="grid-item-c">02</div>
         <div class="grid-item-c">03</div>
