メールアドレス用の入力フィールドを作成しました

--- a/My-HTML-CSS/loginform/index.html
+++ b/My-HTML-CSS/loginform/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>My LoginForm</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <h1>Sign in to your account</h1>
+    <form action="post">
+      <label for="">Your email</label>
+      <input type="email" name="mailAddress" placeholder="name@company.com" />
+    </form>
+  </body>
 </html>
