--- a/My-HTML-CSS/loginform/index.html
+++ b/My-HTML-CSS/loginform/index.html
@@ -11,6 +11,10 @@
     <form action="post">
       <label for="">Your email</label>
       <input type="email" name="mailAddress" placeholder="name@company.com" />
+      <label for="">Password</label>
+      <input type="password" name="password">
+      <button>Sign in</button>
+      <div>Don't have an accunt yet?<a href="">Sign up</a></div>
     </form>
   </body>
 </html>
