各要素にクラスを定義しました

--- a/My-HTML-CSS/loginform/index.html
+++ b/My-HTML-CSS/loginform/index.html
@@ -8,13 +8,19 @@
   </head>
   <body>
     <h1>Sign in to your account</h1>
-    <form action="post">
-      <label for="">Your email</label>
-      <input type="email" name="mailAddress" placeholder="name@company.com" />
-      <label for="">Password</label>
-      <input type="password" name="password">
-      <button>Sign in</button>
-      <div>Don't have an accunt yet?<a href="">Sign up</a></div>
+    <form class="form-content" action="post">
+      <label class="form-label" for="">Your email</label>
+      <input class="form-mail"
+        type="email"
+        name="mailAddress"
+        placeholder="name@company.com"
+      />
+      <label class="form-label" for="">Password</label>
+      <input class="form-pass" type="password" name="password" />
+      <button class="form-button">Sign in</button>
+      <div class="form-signUp">
+        Don't have an accunt yet?<a href="">Sign up</a>
+      </div>
     </form>
   </body>
 </html>
