CSSを定義しました

--- a/My-HTML-CSS/loginform/index.html
+++ b/My-HTML-CSS/loginform/index.html
@@ -7,10 +7,11 @@
     <title>My LoginForm</title>
   </head>
   <body>
-    <h1>Sign in to your account</h1>
     <form class="form-content" action="post">
+      <h1>Sign in to your account</h1>
       <label class="form-label" for="">Your email</label>
-      <input class="form-mail"
+      <input
+        class="form-mail"
         type="email"
         name="mailAddress"
         placeholder="name@company.com"
