--- a/My-HTML-CSS/loginform/index.html
+++ b/My-HTML-CSS/loginform/index.html
@@ -20,7 +20,7 @@
       <input class="form-pass" type="password" name="password" />
       <button class="form-button">Sign in</button>
       <div class="form-signUp">
-        Don't have an accunt yet?<a href="">Sign up</a>
+        Don't have an account yet?<a href="">Sign up</a>
       </div>
     </form>
   </body>
