--- a/My-Database/index.html
+++ b/My-Database/index.html
@@ -23,5 +23,6 @@
         Don't have an account yet?<a href="">Sign up</a>
       </div>
     </form>
+    <script src="/main.js"></script>
   </body>
 </html>
