--- a/My-Database/index.html
+++ b/My-Database/index.html
@@ -12,17 +12,18 @@
       <label class="form-label" for="">Your email</label>
       <input
         class="form-mail"
+        id="js-mail"
         type="email"
         name="mailAddress"
         placeholder="name@company.com"
       />
       <label class="form-label" for="">Password</label>
-      <input class="form-pass" type="password" name="password" />
-      <button class="form-button">Sign in</button>
+      <input class="form-pass" id="js-pass" type="password" name="password" />
+      <button class="form-button" id="js-button">Sign in</button>
       <div class="form-signUp">
         Don't have an account yet?<a href="">Sign up</a>
       </div>
     </form>
-    <script src="/main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
